Reorder loop indexes

--- a/pmlc/dialect/pxa/transforms/CMakeLists.txt
+++ b/pmlc/dialect/pxa/transforms/CMakeLists.txt
@@ -16,6 +16,7 @@
     localize.cc
     nest_loops.cc
     normalize.cc
+    reorder_loops.cc
     resize_tmps.cc
     simplify_arithmetic.cc
     stencil_gemm.cc
